refactor(order-service): extract kafka event publishing to separate service
- Move Kafka event publishing logic from OrderService to new OrderEventPublisher
- Use OrderMapper for DTO conversion in controller
- Replace field injection with constructor injection using Lombok