@@ -1,35 +1,30 @@
 package com.fooddelivery.orderservice.service;
 
-import com.fooddelivery.orderservice.dto.CreateOrderRequestDto;
-import com.fooddelivery.orderservice.model.Order;
-import com.fooddelivery.orderservice.model.OrderItem;
-import com.fooddelivery.orderservice.model.OrderStatus;
-import com.fooddelivery.orderservice.repository.OrderRepository;
-import com.fooddelivery.shared.dto.OrderItemDto;
-import com.fooddelivery.shared.event.OrderPlacedEvent;
-import jakarta.transaction.Transactional;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.kafka.core.KafkaTemplate;
-import org.springframework.stereotype.Service;
-
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import org.springframework.stereotype.Service;
+
+import com.fooddelivery.orderservice.dto.CreateOrderRequestDto;
+import com.fooddelivery.orderservice.model.Order;
+import com.fooddelivery.orderservice.model.OrderItem;
+import com.fooddelivery.orderservice.repository.OrderRepository;
+import com.fooddelivery.shared.enumerate.OrderStatus;
+
+import jakarta.transaction.Transactional;
+import lombok.AllArgsConstructor;
 
 @Service
+@AllArgsConstructor
 public class OrderService {
-    private static final String TOPIC_ORDER_PLACED = "order_placed";
     private final List<OrderStatus> activeStatuses = List.of(
             OrderStatus.PENDING,
             OrderStatus.ACCEPTED,
             OrderStatus.PREPARING);
 
-    @Autowired
-    private OrderRepository orderRepository;
-
-    @Autowired
-    private KafkaTemplate<String, OrderPlacedEvent> kafkaTemplate;
+    private final OrderRepository orderRepository;
+    private final OrderEventPublisher orderEventPublisher;
 
     public List<Order> getOrdersByCustomerId(Long customerId) {
         return orderRepository.findByCustomerIdOrderByCreatedAtDesc(customerId);
@@ -58,7 +53,7 @@ public class OrderService {
             item.setPrice(itemDto.price());
             item.setOrder(order); // Link back to the order
             return item;
-        }).collect(Collectors.toList());
+        }).toList();
         order.setItems(orderItems);
 
         // Calculate total price
@@ -69,20 +64,7 @@ public class OrderService {
 
         Order savedOrder = orderRepository.save(order);
 
-        // --- KAFKA EVENT PUBLISHING ---
-        // Create the event payload
-        List<OrderItemDto> itemDetails = savedOrder.getItems().stream()
-                .map(item -> new OrderItemDto(item.getMenuItemId(), item.getQuantity()))
-                .collect(Collectors.toList());
-
-        OrderPlacedEvent event = new OrderPlacedEvent(
-                savedOrder.getId(),
-                savedOrder.getRestaurantId(),
-                savedOrder.getCustomerId(),
-                itemDetails);
-
-        // Send to Kafka
-        kafkaTemplate.send(TOPIC_ORDER_PLACED, event);
+        orderEventPublisher.publishOrderPlacedEvent(savedOrder);
 
         return savedOrder;
     }
